@@ -1,4 +1,7 @@
- $Id: ChangeLog,v 1.131.2.25.2.133 2010/10/17 01:43:45 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.25.2.134 2010/10/18 14:33:50 uehira Exp $
+
+2010-10-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
+	* src/shmcounter.c : added.
 
 2010-10-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* configure.in : added AM_PROG_CC_C_O
